update: CRUD e mensagerias implantados

--- a/vendas/Vendas.API/appsettings.json
+++ b/vendas/Vendas.API/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=VendasDb;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "EstoqueApi": {
+      "BaseUrl": "http://localhost:5001/api/Produtos/ObterProdutoPorId/"
   }  
 }
