update: adicionar testes http

--- a/vendas/Vendas.API/appsettings.json
+++ b/vendas/Vendas.API/appsettings.json
@@ -10,6 +10,6 @@
     "DefaultConnection": "Server=localhost;Database=VendasDb;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "EstoqueApi": {
-      "BaseUrl": "http://localhost:5001/api/Produtos/ObterProdutoPorId/"
+      "BaseUrl": "http://localhost:5001/api/Produtos/"
   }  
 }
