feat: Add authentication and authorization to the API
- Implemented JWT authentication in Auth.API with token generation and validation.
- Created AuthController for user login and registration with role-based access.
- Added database context and repository pattern for user management.
- Integrated Swagger for API documentation and testing.
- Set up exception handling middleware for better error management.
- Updated appsettings.json to include JWT configuration.
- Added Docker support for Auth API and database.
- Removed unused HTTP file from Vendas.API.
- Created PowerShell script to run all APIs concurrently.

--- a/Estoque.API/appsettings.json
+++ b/Estoque.API/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=EstoqueDb;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Key": "ecommerce-api-MinhaChaveSuperSecreta123456789!!"
   }
 }
