--- a/Vendas.API/appsettings.json
+++ b/Vendas.API/appsettings.json
@@ -10,6 +10,9 @@
     "DefaultConnection": "Server=localhost;Database=VendasDb;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "EstoqueApi": {
-      "BaseUrl": "http://localhost:5001/api/Produtos/"
-  }  
+      "BaseUrl": "http://localhost:5000/api/produtos/"
+  },
+  "Jwt": {
+    "Key": "ecommerce-api-MinhaChaveSuperSecreta123456789!!"
+  }
 }
