--- a/Auth.API/appsettings.json
+++ b/Auth.API/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=UsuariosDb;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Jwt": {
+  "Key": "ecommerce-api-MinhaChaveSuperSecreta123456789!!"
+  }  
 }
