Refactor Auth and Estoque APIs for improved database handling and pagination
- Updated AuthContext to use connection string with user credentials.
- Enhanced DbContextExtensions to enable retry on SQL Server connection failures.
- Modified IUsuarioRepository and UsuarioRepository to use asynchronous methods for user retrieval.
- Improved ProdutosController in Estoque API to handle pagination and added authorization roles.
- Refactored EstoqueService and ProdutoRepository to support paginated product retrieval.
- Updated appsettings.json for both Auth and Estoque APIs with new connection strings.
- Enhanced PedidoController in Vendas API to include pagination for order retrieval.
- Refactored PedidoRepository and VendaService to support paginated order retrieval.
- Updated PedidoValidator to include authorization token in stock verification requests.
- Improved logging and error handling across various services.
- Added structured logging and exception handling middleware.

--- a/Auth.API/appsettings.json
+++ b/Auth.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=UsuariosDb;Trusted_Connection=True;TrustServerCertificate=True"
+  "DefaultConnection": "Server=localhost,1435;Database=UsuariosDb;User Id=sa;Password=YourStrong@Pass3;TrustServerCertificate=True"
   },
   "Jwt": {
   "Key": "ecommerce-api-MinhaChaveSuperSecreta123456789!!"
