--- a/Estoque.API/appsettings.json
+++ b/Estoque.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=EstoqueDb;Trusted_Connection=True;TrustServerCertificate=True"
+  "DefaultConnection": "Server=localhost,1433;Database=EstoqueDb;User Id=sa;Password=YourStrong@Pass1;TrustServerCertificate=True"
   },
   "Jwt": {
     "Key": "ecommerce-api-MinhaChaveSuperSecreta123456789!!"
