--- a/Vendas.API/appsettings.json
+++ b/Vendas.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=VendasDb;Trusted_Connection=True;TrustServerCertificate=True"
+  "DefaultConnection": "Server=localhost,1434;Database=VendasDb;User Id=sa;Password=YourStrong@Pass2;TrustServerCertificate=True"
   },
   "EstoqueApi": {
       "BaseUrl": "http://localhost:5000/api/produtos/"
